# hanzi-workbook-creator

./: .gitignore  .gitmodules  404.html  LICENSE  Makefile  Pipfile  README.md  asset-manifest.json  fetch_data.py  index.html  make_html.py  package-lock.json  package.json  pyproject.toml  style.css  toPng.js
.github/workflows/: deploy.yml
practice-hanzi/: .gitignore  convert.py  make_hanzi.py  package-lock.json  package.json
practice-hanzi/src/: App.tsx
practice-hanzi/src/components/: hanziData.d.ts
practice-hanzi/src/pages/Home/: Home.tsx
public/: index.html
src/: App.tsx  sample.json
src/components/: BottomAppBar.tsx  BrowserHanziCard.tsx  HanziCard.tsx  MobileHanziCard.tsx  TopAppBar.tsx  getHanziDatas.tsx  getSavedData.tsx  getStrokesData.tsx  hanziData.d.ts  pinyinToneConvert.tsx  style.css
src/components/HanziCard/: index.tsx  style.css
src/components/HanziCardComponents/: index.tsx
src/pages/Home/: Home.tsx  index.tsx
src/pages/Preview/: Preview.tsx  index.tsx  style-preview.css  styles.module.css
src/pages/Print/: index.tsx
static/css/: main.0e1b3506.css  main.0e1b3506.css.map  main.7f25dcee.css  main.7f25dcee.css.map
static/js/: 787.841c817b.chunk.js  787.841c817b.chunk.js.map  main.18c7fa08.js.LICENSE.txt  main.1e6b5e00.js.LICENSE.txt  main.1e6b5e00.js.map  main.2aba8dbf.js.map  main.2b557f18.js.map  main.44c7bbd6.js.map  main.6caf1c36.js.map  main.7abf26f1.js.LICENSE.txt  main.7abf26f1.js.map  main.8da54e55.js.map  main.ec8410c4.js.LICENSE.txt  main.ec8410c4.js.map  main.f9a2f173.js.map
(+2 files in other folders)
