[tool.poetry]
name = "practice-hanzi"
version = "0.1.0"
description = ""
authors = ["chvmvd <chvmvd@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "practice_hanzi"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
